--- a/app/views/pharmacies/index.html.erb
+++ b/app/views/pharmacies/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Pharmacies#index</h1>
-<p>Find me in app/views/pharmacies/index.html.erb</p>
+<div class="view">
+  <h1>Pharmacies</h1>
+  <% @pharmacies.each do |pharmacy| %>
+    <div class="pharmacy-card">
+      <%= image_tag pharmacy.profile_pic %>
+      <h1><%= pharmacy.name %></h1>
+      <p><%= pharmacy.description %></p>
+      <div class="card-bottom">
+        <%= link_to pharmacy_path(pharmacy), :style=>'width: 50px; color: gray', method: :delete, data: { confirm: "Are you sure?" } do %>
+          <i class="fas fa-trash booking-delete"></i>
+        <% end %>
+        <h1><%= pharmacy.price_per_day %>$ <small>per day</small></h1>
+      </div>
+    </div>
+  <% end %>
+</div>
