--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,12 +1,13 @@
 .banner {
   height: 100vh;
   display: flex;
+  position: absolute;
+  top: 0;
 }
 
 #banner-search-bar {
   height: fit-content;
   width: 100%;
+  margin-top: 20vh;
   padding: 30px 40px;
-  border-radius: 7px;
-  background: linear-gradient(#0077b6, #caf0f8);
 }
