--- a/app/assets/stylesheets/components/_pharmacy-card.scss
+++ b/app/assets/stylesheets/components/_pharmacy-card.scss
@@ -1,46 +1,31 @@
 .pharmacy-card {
-  width: 100%;
-  border-radius: 7px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.07);
-  position: relative;
-  padding: 10px;
-  background-color: rgba($color: #000000, $alpha: 0.0);
+  background: none;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
-.pharmacy-card img {
-  width: 100%;
-  height: 310px;
-  object-fit: cover;
-  padding-bottom: 10px;
-  overflow: hidden;
-}
-
-.pharmacy-card h1 {
-  color: black;
-  font-size: 17px;
+.pharmacy-card h2 {
+  font-size: 8px;
+  font-weight: bold;
+  margin: 0;
 }
 
 .pharmacy-card p {
-  color: black;
-  font-size: 12px;
-  height: 50px;
+  font-size: 6px;
+  opacity: .7;
+  margin: 0;
 }
 
-.pharmacy-card .card-bottom {
+.pharmacy-card .pharmacy-card-infos {
+  padding: 16px;
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
+  position: relative;
 }
 
-.card-bottom {
-  display: flex;
-  justify-content: space-between;
-}
-.card-big {
-  width: 650px;
-}
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  justify-content: space-evenly;
+.pharmacy-card-infos .pharmacy-card-user {
+  position: absolute;
+  right: 16px;
+  top: -20px;
+  width: 40px;
 }
