--- a/app/views/pharmacies/index.html.erb
+++ b/app/views/pharmacies/index.html.erb
@@ -1,15 +1,18 @@
 <div class="view">
   <h1>Pharmacies</h1>
+  <div id="map"
+              class="my-2"
+              style="width: 100%; height: 200px; border-radius: 7px;"
+              data-markers="<%= @markers.to_json %>"
+              data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
   <% @pharmacies.each do |pharmacy| %>
     <div class="pharmacy-card">
-      <%= image_tag pharmacy.profile_pic %>
-      <h1><%= pharmacy.name %></h1>
-      <p><%= pharmacy.description %></p>
-      <div class="card-bottom">
-        <%= link_to pharmacy_path(pharmacy), :style=>'width: 50px; color: gray', method: :delete, data: { confirm: "Are you sure?" } do %>
-          <i class="fas fa-trash booking-delete"></i>
-        <% end %>
-        <h1><%= pharmacy.price_per_day %>$ <small>per day</small></h1>
+      <div class="pharmacy-card-infos">
+        <div>
+          <h2><%= pharmacy.name %></h2>
+          <p><%= pharmacy.description %></p>
+        </div>
       </div>
     </div>
   <% end %>
