--- a/app/views/ordered_drugs/index.html.erb
+++ b/app/views/ordered_drugs/index.html.erb
@@ -1,4 +1,4 @@
-<div class="two-columns-cards">
+<div class="container">
   <% @ordered_drugs.each do |order| %>
     <%= order.price %>
   <% end %>
