--- a/app/views/pharmacies/show.html.erb
+++ b/app/views/pharmacies/show.html.erb
@@ -7,3 +7,5 @@
                   data-markers="<%= @markers.to_json %>"
                   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
 </div>
+
+<%= link_to "drugs", drugs_path(pharmacy_id: @pharmacy.id) %>
