basic css for the homepage is finished. will need to clean up certain things

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,18 @@
 // Specific CSS for your home-page
+
+.title {
+  padding-top: 15px;
+  padding-left: 30px;
+  h1 {
+    font-size: 55px;
+  }
+}
+
+.sub-title {
+  padding-top: 30px;
+  padding-left: 42px
+}
+
+.search-button {
+  margin-top: 8px;
+}
