--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,13 +1,13 @@
 .banner {
   height: 100vh;
   display: flex;
-  position: absolute;
+  position: relative;
   top: 0;
 }
 
 #banner-search-bar {
   height: fit-content;
   width: 100%;
-  margin-top: 20vh;
-  padding: 30px 40px;
+  margin-top: 10px;
+  padding: 40px 45px;
 }
