working on navbar

--- a/app/assets/stylesheets/components/_pharmacy-card.scss
+++ b/app/assets/stylesheets/components/_pharmacy-card.scss
@@ -1,6 +1,5 @@
 .pharmacy-card {
-  background: none;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  background: white;
   margin: 5px 0;
   height: 60px;
   border-radius: 7px;
