--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,27 @@
-.navbar-lewagon {
-  justify-content: space-between;
+.nav {
   background: white;
+  position: fixed;
+  top: 10px;
+  height: fit-content;
+  border-radius: 35px;
+  padding: 5px 10px;
+  width: 95vw;
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+.nav .navbar-brand img {
+  width: 50px;
+  height: 50px;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.nav-wrapper {
+  display: flex;
+  justify-content: space-around;
+  background-color: rgba(244,244,244, 0.8);
+  position: fixed;
+  top: 0;
+  height: 80px;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 0 0 35px 35px;
+  width: 100%;
 }
