--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,16 +4,13 @@
       <%= image_tag "home.png" %>
     <% end %>
     <%= link_to root_path, class: "footer-btn" do %>
-      <%= image_tag "qr-code-scan.png" %>
+      <%= image_tag "scan.png" %>
     <% end %>
     <%= link_to root_path, class: "footer-btn" do %>
       <%= image_tag "shopping-cart.png" %>
     <% end %>
     <%= link_to root_path, class: "footer-btn" do %>
-      <%= image_tag "dna.png" %>
-    <% end %>
-    <%= link_to root_path, class: "footer-btn" do %>
-      <%= image_tag "user.png" %>
+      <%= image_tag "dashboard.png" %>
     <% end %>
   </div>
 </div>
