--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,7 +1,6 @@
 .footer {
   display: flex;
   justify-content: space-between;
-  width: 100%;
   background: white;
   border-radius: 35px;
   padding: 15px 20px;
@@ -11,6 +10,7 @@
   height: fit-content;
   width: 95vw;
   box-shadow: 0 0 15px rgba(0,0,0,0.1);
+  z-index: 2;
 }
 
 .footer .footer-btn img {
@@ -24,11 +24,12 @@
 .footer-wrapper {
   display: flex;
   justify-content: space-around;
-  background-color: rgba(244,244,244, 0.8);
+  background-color: rgba(255,255,255, 0.8);
   position: fixed;
   bottom: 0;
   height: 80px;
   padding: 10px;
   border-radius: 35px 35px 0 0;
   width: 100%;
+  backdrop-filter: blur(8px);
 }
