--- a/app/assets/stylesheets/components/_view.scss
+++ b/app/assets/stylesheets/components/_view.scss
@@ -2,6 +2,13 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  padding: 10px;
+  padding: 15px;
   justify-content: center;
+  background-color: white;
+  z-index: 0;
+  margin-top: 85px;
+}
+
+body {
+  background-color: white;
 }
