--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,6 +8,20 @@
   }
 }
 
+.banner {
+  height: 100vh;
+  display: flex;
+  position: relative;
+  top: 0;
+}
+
+#banner-search-bar {
+  height: fit-content;
+  width: 100%;
+  margin-top: 10px;
+  padding: 5px 35px;
+}
+
 .sub-title {
   padding-top: 30px;
   padding-left: 42px
@@ -15,4 +29,28 @@
 
 .search-button {
   margin-top: 8px;
+}
+
+
+@media screen and (max-width: 400px) {
+  .title {
+  padding-top: 15px;
+  padding-left: 15px;
+    h1 {
+    font-size: 45px;
+    }
+  }
+  img {
+    height: 90px;
+    width: 90px;
+  }
+  .sub-title {
+    padding-left: 25px;
+  }
+  #banner-search-bar {
+  height: fit-content;
+  width: 100%;
+  margin-top: 10px;
+  padding: 5px 20px;
+}
 }
