--- a/app/assets/stylesheets/pages/_drugs.scss
+++ b/app/assets/stylesheets/pages/_drugs.scss
@@ -1,61 +1,149 @@
-
-.drugs-cards {
-  margin: 40px auto;
+.background-drugs{
+  background:#00243D;
 }
-.card-product {
+
+.title {
+  padding-top: 15px;
+  color: #FFFFFF ;
+}
+
+
+.two-columns-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
+
+
+.card-drug {
   overflow: hidden;
-  height: 120px;
   background: white;
-  box-shadow: 0 0 25px rgba(0,0,0,0.2);
-  display: flex;
-  align-items: center;
-  margin: 15px ;
-  border-radius: 7px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 15px;
+  position: relative;
+  height: 173px;
 }
 
-.card-product img {
-  height: 100%;
-  width: 120px;
+.topcard {
+  height: 150px;
+  width: 100%;
+}
+
+.topcard > img {
+  height: 130px;
+  width: 100%;
   object-fit: cover;
 }
 
-.card-product h2 {
-  font-size: 16px;
+.card-drug h2 {
+  font-size: 14px;
   font-weight: bold;
   margin: 0;
 }
 
-.card-product p {
+.card-drug p {
   font-size: 12px;
-  line-height: 1.4;
   opacity: .7;
-  margin-bottom: 0;
-  margin-top: 8px;
+  margin: 0;
 }
 
-.card-product .card-product-infos {
+
+.card-drug .card-drug-infos {
   padding: 16px;
-}
-
-.card-product-infos {
-  padding: 16px;
-  height: 125px;
-}
-.card-product a {
-  color: black;
-  flex-grow: 1;
-}
-
-.card-product-icons {
-  margin: 16px 16px 16px 0;
-  width: 20px;
-  height: 120px;
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
-  .drugs-delete {
-    color: grey;
-    width: 20px;
-    transition-duration: .2s;
-  }
+  align-items: flex-end;
+  position: absolute;
+  border-radius: 20px 20px 0 0;
+  background-color: white;
+  top: 111px;
+  width: 100%;
 }
+
+.card-drug-infos .card-drug-plus {
+  position: absolute;
+  right: 13px;
+  top: 31px;
+}
+
+.card-drug-infos .card-drug-loupe {
+  position: absolute;
+  right: -30px;
+  top: 24px;
+}
+
+.icon {
+  height: 13px;
+  width: 13px;
+  transition: 0.2s ease;
+}
+
+.icon:hover {
+  height: 17px;
+  width: 17px;
+
+}
+
+
+
+
+
+// .card-product {
+//   overflow: hidden;
+//   height: 120px;
+//   background: white;
+//   box-shadow: 0 0 25px rgba(0,0,0,0.2);
+//   display: flex;
+//   align-items: center;
+//   margin: 15px ;
+//   border-radius: 7px;
+// }
+
+// .card-product img {
+//   height: 100%;
+//   width: 120px;
+//   object-fit: cover;
+// }
+
+// .card-product h2 {
+//   font-size: 16px;
+//   font-weight: bold;
+//   margin: 0;
+// }
+
+// .card-product p {
+//   font-size: 12px;
+//   line-height: 1.4;
+//   opacity: .7;
+//   margin-bottom: 0;
+//   margin-top: 8px;
+// }
+
+// .card-product .card-product-infos {
+//   padding: 16px;
+// }
+
+// .card-product-infos {
+//   padding: 16px;
+//   height: 125px;
+// }
+// .card-product a {
+//   color: black;
+//   flex-grow: 1;
+// }
+
+// .card-product-icons {
+//   margin: 16px 16px 16px 0;
+//   width: 20px;
+//   height: 120px;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-between;
+//   .drugs-delete {
+//     color: grey;
+//     width: 20px;
+//     transition-duration: .2s;
+//   }
+// }
