--- a/app/assets/stylesheets/pages/_pharmacy-index.scss
+++ b/app/assets/stylesheets/pages/_pharmacy-index.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   background-color: white;
   z-index: 0;
-  margin-top: 95px;
+  margin: 95px 10px 10px 10px;
 }
 
 .pharmacy-view h1 {
@@ -19,7 +19,7 @@
 }
 
 .pharmacy-view #map {
-  width: 100vw;
+  width: 95vw;
   height: 300px;
   border-radius: 20px 20px 0 0;
   margin-bottom: -10px;
