--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container background-drugs">
-  <div class="views">
+<div class="container">
+  <div class="view">
 
     <div>
       <div class="title">
