changed navbar behaviour

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -16,3 +16,13 @@
 .search-button {
   margin-top: 8px;
 }
+
+.home-view {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  padding: 15px;
+  justify-content: center;
+  background-color: white;
+  z-index: 0;
+}
