--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="view">
+<div class="home-view">
   <div class="row align-items-center title">
     <div class="col align-self-center">
      <h1>Drug<br/>Dealer</h1>
