corrected error css

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,13 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+
+#colors {
+ color: #000507 ;
+ color: #00243D ;
+ color: #00B8F5 ;
+ color: #D6F3FF ;
+ color: #FFFFFF ;
+ color: #09BC8A ;
+}
