--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -24,7 +24,7 @@
 
 .sub-title {
   padding-top: 30px;
-  padding-left: 42px
+  padding-left: 42px;
 }
 
 .search-button {
@@ -39,26 +39,27 @@
   justify-content: center;
   background-color: white;
   z-index: 0;
+}
 
-@media screen and (max-width: 400px) {
-  .title {
-  padding-top: 15px;
-  padding-left: 15px;
-    h1 {
-    font-size: 45px;
-    }
-  }
-  img {
-    height: 90px;
-    width: 90px;
-  }
-  .sub-title {
-    padding-left: 25px;
-  }
-  #banner-search-bar {
-  height: fit-content;
-  width: 100%;
-  margin-top: 10px;
-  padding: 5px 20px;
-}
-}
+// @media screen and (max-width: 400px) {
+//   .title {
+//   padding-top: 15px;
+//   padding-left: 15px;
+//     h1 {
+//     font-size: 45px;
+//     }
+//   }
+//   img {
+//     height: 90px;
+//     width: 90px;
+//   }
+//   .sub-title {
+//     padding-left: 25px;
+//   }
+//   #banner-search-bar {
+//   height: fit-content;
+//   width: 100%;
+//   margin-top: 10px;
+//   padding: 5px 20px;
+//   }
+// }
