--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,29 +1,19 @@
-.button_prescription {
-  display: inline-block;
+.button-meds-index {
   padding: 0.3em 1.2em;
-  margin: 0 0.1em 0.1em 0;
-  border: 0.16em solid rgba(255,255,255,0);
-  border-radius: 2em;
-  box-sizing: border-box;
-  // background-color: #00B8F5;
+  border-radius: 20px;
   text-decoration: none;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-weight: 300;
-  color: #201f1f;
-  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+  color: white;
   text-align: center;
-  text-transform: uppercase;
-  transition: all 0.2s;
-}
-
-.button_prescription:hover {
-  border-color: rgba(255,255,255,1);
-  text-decoration: none;
-}
-
-@media all and (max-width:30em) {
-  .button_prescription {
-    display: block;
-    margin: 0.2em auto;
+  background-color: #00B8F5;
+  font-size: 20px;
   }
+
+.button-pharma-index {
+  text-decoration: underline;
+  color: grey;
+  text-align: center;
+}
+
+.pharmacy-show-top {
+  margin: 10px 0 20px 5px;
 }
