--- a/app/assets/stylesheets/pages/_pharma.scss
+++ b/app/assets/stylesheets/pages/_pharma.scss
@@ -1,101 +1,36 @@
-:root {
-    --surface-color: #00243D;
-    --curve: 40;
+.pharmacy-show {
+  padding: 20px 20px 40px 20px;
+  margin-bottom: -60px;
+  border-radius: 20px 20px 0 0;
+  color: white;
+  background-color: #00243D;
+  z-index: 1;
+  h1 {
+    font-weight: bold;
+    font-size: 25px;
   }
-
-body {
-  font-family: 'Noto Sans JP', sans-serif;
-  // background-color: #fef8f8;
+  p {
+    font-size: 15px;
+  }
 }
 
-.card {
+.pharmacy-show-card {
   position: relative;
   display: block;
   height: 100%;
-  border-radius: calc(var(--curve) * 1px);
   overflow: hidden;
+  border-radius: 20px 20px 0 0;
   text-decoration: none;
 }
 
-.card__overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  border-radius: calc(var(--curve) * 1px);
-  background-color: var(--surface-color);
-  transform: translateY(100%);
-  transition: .2s ease-in-out;
-  z-index: 3;
+.pharmacy-show-card #map {
+  width: 95vw;
+  height: 300px;
+  margin-bottom: -10px;
+  z-index: 2;
 }
 
-.card:hover .card__overlay {
-  transform: translateY(0);
-}
-
-.card__header {
-  position: relative;
-  display: flex;
-  align-items: center;
-  gap: 2em;
-  padding: 2em;
-  border-radius: calc(var(--curve) * 1px) 0 0 0;
-  background-color: var(--surface-color);
-  transform: translateY(-100%);
-  transition: .2s ease-in-out;
-}
-
-.card__arc {
-  width: 80px;
-  height: 80px;
-  position: absolute;
-  bottom: 100%;
-  right: 0;
-  z-index: 1;
-}
-
-.card__arc path {
-  fill: var(--surface-color);
-  // d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
-}
-
-.card:hover .card__header {
-  transform: translateY(0);
-}
-
-.card__thumb {
-  flex-shrink: 0;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-}
-
-.card__title {
-  font-size: 1em;
-  margin: 0 0 .3em;
-  color: #be87a4;
-}
-
-.card__tagline {
-  display: block;
-  margin: 1em 0;
-  font-family: "MockFlowFont";
-  font-size: .8em;
-  color: #D7BDCA;
-}
-
-.card__status {
-  font-size: .8em;
-  color: #D7BDCA;
-}
-
-.card__description {
-  padding: 0 2em 2em;
-  margin: 0;
-  color: #D7BDCA;
-  font-family: "MockFlowFont";
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
-  overflow: hidden;
+canvas.mapboxgl-canvas {
+  height: -webkit-fill-available !important;
+  width: -webkit-fill-available !important;
 }
