working on different views for the order show

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,8 +1,6 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "drugs";
-
-@import "ordered";
-
 @import "pharmacy-index";
 @import "pharma";
+@import "order";
