--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -5,7 +5,7 @@
 
   <div>
     <div class="title">
-      <h2>Medecines</h2>
+      <h2>Medicine</h2>
     </div>
 
       <div class="two-columns-cards">
