--- a/app/assets/stylesheets/pages/_drugs.scss
+++ b/app/assets/stylesheets/pages/_drugs.scss
@@ -61,6 +61,11 @@
   height: 62px;
 }
 
+.card-drug .card-drug-infos p{
+  color: grey;
+  font-size: 10px;
+}
+
 .card-drug-infos .card-drug-plus {
   position: absolute;
   right: 13px;
