--- a/app/assets/stylesheets/pages/_order.scss
+++ b/app/assets/stylesheets/pages/_order.scss
@@ -1,25 +1,25 @@
-.card-product {
-  overflow: hidden;
+.cart-card {
   height: 120px;
+  width: 100%;
   background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
-.card-product img {
-  height: 100%;
-  width: 120px;
+.cart-card img {
+  height: 100px;
+  width: 100px;
   object-fit: cover;
 }
 
-.card-product h2 {
+.cart-card h2 {
   font-size: 16px;
   font-weight: bold;
   margin: 0;
 }
 
-.card-product p {
+.cart-card p {
   font-size: 12px;
   line-height: 1.4;
   opacity: .7;
@@ -27,7 +27,7 @@
   margin-top: 8px;
 }
 
-.card-product .card-product-infos {
+.cart-card .cart-card-infos {
   padding: 16px;
 }
 
