--- a/app/views/pharmacies/show.html.erb
+++ b/app/views/pharmacies/show.html.erb
@@ -13,5 +13,5 @@
                 data-markers="<%= @markers.to_json %>"
                 data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
   </div>
-  <%= link_to "Purchase medicine", drugs_path(pharmacy_id: @pharmacy.id), class:"button-meds-index" %>
+  <%= link_to "Purchase medicine", orders_path(pharmacy_id: @pharmacy.id), method: 'POST', class:"button-meds-index" %>
 </div>
