--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -2,33 +2,37 @@
 <div class="container">
   <div class="view">
 
+    <%= form_tag drugs_path, method: :get do %>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "form-control",
+        placehorlder: "Search for a drug"
+      %>
+      <%= hidden_field_tag :pharmacy_id, @pharmacy.to_s %>
+      <%= submit_tag "Search", class: "button_prescription" %>
+    <% end %>
 
-  <div>
-    <div class="title">
-      <h2>Medecines</h2>
-    </div>
 
-      <div class="two-columns-cards">
-        <% @drugs.each do |drug| %>
-          <div class="card-drug">
-            <div class="topcard">
-              <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-            </div>
-            <div class="card-drug-infos">
-              <div >
-                <h2><%=drug.name.split(' ').map {|a| a.capitalize}.join(' ').split(',').first%></h2>
+    <div class="two-columns-cards">
+          <% @drugs.each do |drug| %>
+            <div class="card-drug">
+              <div class="topcard">
+                <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
               </div>
-              <h2 class="card-drug-plus">
-              <% if OrderedDrug.find_by(drug: drug, order: current_user.orders.last) %>
-                <%= link_to image_tag("cocher.png", :border=>0, :class => 'icon'), order_ordered_drugs_path(current_user.orders.last, params: { drug_id: drug.id }), method: :post %>
-                <% else %>
-                <%= link_to image_tag("plus.png", :border=>0, :class => 'icon'), order_ordered_drugs_path(current_user.orders.last, params: { drug_id: drug.id }), method: :post %>
-              <% end %>
-              </h2>
+              <div class="card-drug-infos">
+                <div >
+                  <h2><%=drug.name.split(' ').map {|a| a.capitalize}.join(' ').split(',').first%></h2>
+                </div>
+                <h2 class="card-drug-plus">
+                <% if OrderedDrug.find_by(drug: drug, order: current_user.orders.last) %>
+                  <%= link_to image_tag("cocher.png", :border=>0, :class => 'icon'), order_ordered_drugs_path(current_user.orders.last, params: { drug_id: drug.id }), method: :post %>
+                  <% else %>
+                  <%= link_to image_tag("plus.png", :border=>0, :class => 'icon'), order_ordered_drugs_path(current_user.orders.last, params: { drug_id: drug.id }), method: :post %>
+                <% end %>
+                </h2>
+              </div>
             </div>
-          </div>
-        <% end %>
-      </div>
-
+          <% end %>
+        </div>
   </div>
 </div>
