--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,10 +6,18 @@
     <%= link_to root_path, class: "footer-btn" do %>
       <%= image_tag "scan.png" %>
     <% end %>
-    <%= link_to root_path, class: "footer-btn" do %>
-      <%= image_tag "shopping-cart.png" %>
+    <% if @lastorder %>
+      <% if @lastorder.status == 'initialized' || @lastorder.status == 'pending' || @lastorder.status == 'ready' %>
+        <%= link_to order_path(@lastorder), class: "footer-btn" do %>
+          <%= image_tag "shopping-cart.png" %>
+        <% end %>
+      <% end %>
+      <% else %>
+        <%= link_to root_path, class: "footer-btn" do %>
+          <%= image_tag "shopping-cart.png" %>
+        <% end %>
     <% end %>
-    <%= link_to root_path, class: "footer-btn" do %>
+    <%= link_to orders_path, class: "footer-btn" do %>
       <%= image_tag "dashboard.png" %>
     <% end %>
   </div>
