--- a/app/assets/stylesheets/pages/_order.scss
+++ b/app/assets/stylesheets/pages/_order.scss
@@ -8,27 +8,44 @@
 }
 
 .cart-card img {
-  height: 100px;
-  width: 100px;
+  height: 80px;
+  width: 80px;
   object-fit: cover;
+  border-radius: 20px;
 }
 
 .cart-card h2 {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
-  margin: 0;
+  margin-left: 10px;
 }
 
 .cart-card p {
-  font-size: 12px;
-  line-height: 1.4;
-  opacity: .7;
-  margin-bottom: 0;
-  margin-top: 8px;
+  font-size: 15px;
+  font-weight: bold;
+  margin-top: 17px;
 }
 
-.cart-card .cart-card-infos {
-  padding: 16px;
+.cart-card-infos {
+  padding: 5px 15px;
+  height: 80px;
+  text-align: left;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.cart-card-bottom {
+  display: flex;
+  width: 50px;
+  justify-content: space-between;
+  align-items: center;
+  img {
+    height: 20px;
+    width: 20px;
+    margin: 0 10px 0 10px;
+  }
 }
 
 .order-drugs {
@@ -55,4 +72,23 @@
 
 .hidden {
   display: none;
+}
+
+.cart-card-icons {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0 20px;
+  height: 80px;
+  a {
+    height: 30px;
+    width: 30px;
+    background-color: whitesmoke;
+    border-radius: 50%;
+    text-align: center;
+  }
+  img {
+    height: 17px;
+    width: 17px;
+  }
 }
