--- a/app/views/orders/_user-initialize.html.erb
+++ b/app/views/orders/_user-initialize.html.erb
@@ -1,16 +1,28 @@
-<div class="container order-drugs pb-5" id="ordered_wrap">
-<%= link_to 'Make Pending', "/orders/#{@order.id}/pending", class: 'btn btn-ghost' %>
-<h2><%= @order.status %></h2>
-  <% @ordered_drugs.each do |order_drug| %>
-    <div class="card-product">
+<div class="view">
+  <h1>Cart</h1>
+  <% @ordered_drugs.each do |ordered_drug| %>
+    <div class="cart-card">
       <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-      <div class="card-product-infos">
-        <h2><%=order_drug.drug.name%></h2>
-        <p><%=order_drug.drug.description%></p>
+      <div class="cart-card-infos">
+        <h2><%=ordered_drug.drug.name%></h2>
+        <div class=cart-card-bottom>
+          <%= link_to minus_ordered_drug_path(ordered_drug) do %>
+            <%= image_tag "moins.png" %>
+          <% end %>
+          <p><%= ordered_drug.quantity %></p>
+          <%= link_to plus_ordered_drug_path(ordered_drug) do %>
+            <%= image_tag "plus.png" %>
+          <% end %>
+        </div>
       </div>
-      <%= link_to ordered_drug_path(order_drug), remote:true ,:style=>'width: 50px; color: gray', method: :delete, data: { confirm: "Are you sure?" } do %>
-      <i class="fas fa-trash"></i>
-      <% end %>
+      <div class="cart-card-icons">
+        <%= link_to do %>
+          <%= image_tag "trash.png" %>
+        <% end %>
+        <%= link_to do %>
+          <%= image_tag "pencil.png" %>
+        <% end %>
+      </div>
     </div>
   <% end %>
 </div>
