--- a/app/views/orders/fake_order.erb
+++ b/app/views/orders/fake_order.erb
@@ -58,11 +58,24 @@
       <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
       <div class="cart-card-infos">
         <h2><%=ordered_drug.drug.name%></h2>
-        <% if truevalue %>
-
-        <% end %>
+        <p><%= ordered_drug.drug.description %></p>
+        <div class=cart-card-bottom>
+          <% link_to do %>
+            <h2>-</h2>
+          <% end %>
+          <p><%= ordered_drug.quantity %></p>
+          <% link_to do %>
+            <h2>+</h2>
+          <% end %>
+        </div>
       </div>
       <div class="cart-card-icons">
+        <% link_to do %>
+          <h2>-</h2>
+        <% end %>
+        <% link_to do %>
+          <h2>+</h2>
+        <% end %>
       </div>
     </div>
   <% end %>
