--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -5,11 +5,13 @@
     <%= form_tag drugs_path, method: :get do %>
       <%= text_field_tag :query,
         params[:query],
-        class: "form-control",
+        class: "form-control searchadrug",
         placehorlder: "Search for a drug"
       %>
       <%= hidden_field_tag :pharmacy_id, @pharmacy.to_s %>
-      <%= submit_tag "Search", class: "button_prescription" %>
+      <%= button_tag :submit, class: "button_prescription" do %>
+        <%= image_tag('download.png') %>
+      <% end %>
     <% end %>
 
     <div class="two-columns-cards">
@@ -24,9 +26,9 @@
                 </div>
                 <h2 class="card-drug-plus">
                 <% if OrderedDrug.find_by(drug: drug, order: current_user.orders.last) %>
-                  <%= link_to image_tag("cocher.png", :border=>0, :class => 'icon'), order_ordered_drugs_path(current_user.orders.last, params: { drug_id: drug.id }), method: :post %>
+                  <%= link_to image_tag("cocher.png", border: 0, class:'icon'), order_ordered_drugs_path(current_user.orders.last, params: { drug_id: drug.id }), method: :post %>
                   <% else %>
-                  <%= link_to image_tag("plus.png", :border=>0, :class => 'icon'), order_ordered_drugs_path(current_user.orders.last, params: { drug_id: drug.id }), method: :post %>
+                  <%= link_to image_tag("plus.png", border: 0, class:'icon'), order_ordered_drugs_path(current_user.orders.last, params: { drug_id: drug.id }), method: :post %>
                 <% end %>
                 </h2>
               </div>
