--- a/app/views/orders/_user-initialize.html.erb
+++ b/app/views/orders/_user-initialize.html.erb
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="cart-card-icons">
-        <%= link_to order_ordered_drug_path(ordered_drug), method: 'DELETE' do %>
+        <%= link_to ordered_drug_path(ordered_drug), method: :delete do %>
           <%= image_tag "trash.png" %>
         <% end %>
       </div>
