--- a/app/assets/stylesheets/pages/_order.scss
+++ b/app/assets/stylesheets/pages/_order.scss
@@ -91,3 +91,15 @@
     width: 17px;
   }
 }
+
+.btn-checkout {
+  width: 100%;
+  margin: 25px 0;
+  border-radius: 32px;
+  border: none;
+  padding: 10px;
+  background-color: #000507;
+  color: white;
+  font-weight: 400;
+  font-size: 18px;
+}
