--- a/app/views/orders/_user-initialize.html.erb
+++ b/app/views/orders/_user-initialize.html.erb
@@ -26,4 +26,7 @@
       </div>
     </div>
   <% end %>
+  <%= link_to pending_status_path(@order) do %>
+    <button class="btn-checkout">Validate shopping cart</button>
+  <% end %>
 </div>
