fix button search a drug

--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -8,9 +8,7 @@
         placehorlder: "Search for a drug"
       %>
       <%= hidden_field_tag :pharmacy_id, @pharmacy.to_s %>
-      <%= button_tag :submit, class: "button_prescription" do %>
-        <%= image_tag('download.png') %>
-      <% end %>
+      <%= submit_tag "☌", class: "button_prescription" %>
     <% end %>
 
     <div class="two-columns-cards">
