--- a/app/assets/stylesheets/components/_drugsearch.scss
+++ b/app/assets/stylesheets/components/_drugsearch.scss
@@ -1,6 +1,6 @@
 .searchadrug {
   border-radius: 30px;
-  width: 281px;
+  width: 73vw;
   position: relative;
 }
 
@@ -8,19 +8,17 @@
   border-radius: 50px;
   position: absolute;
   top: 10px;
-  right: 11px;
+  right: 16px;
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.3em 1.2em;
   text-decoration: none;
   text-align: center;
   border: none;
   background: #00B8F5;
-  width: 30px;
+  width: 1vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  img {
-    height: 20px;
-    width: 20px;
-  }
+  font-size: 16px;
+  transform: rotate(112deg);
 }
