--- a/app/assets/stylesheets/components/_drugsearch.scss
+++ b/app/assets/stylesheets/components/_drugsearch.scss
@@ -2,12 +2,13 @@
   border-radius: 30px;
   width: 281px;
   position: relative;
+  padding-top: 7px;
 }
 
 .button_prescription {
   border-radius: 50px;
   position: absolute;
-  top: 10px;
+  top: 94px;
   right: 11px;
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.3em 1.2em;
