--- a/app/views/orders/_user-pending.html.erb
+++ b/app/views/orders/_user-pending.html.erb
@@ -1,4 +1,30 @@
-<div class="container order-drugs pb-5">
-  <h2><%= @order.status %></h2>
-  <h3>Waiting to hear back from pharmacist.</h3>
+<div class="flash flash-warning alert alert-dismissible fade show" role="alert">
+  <div class="flash-content">
+    <p><strong>Hi again!</strong> Your order is being handeled by the pharmacist. You will be notified as soon as it's ready for payment ☺️</p>
+    <%= link_to "< Back to your orders", orders_path, class:"button-pharma-index"%>
+  </div>
+  <a data-dismiss="alert" aria-label="Close">
+    <i class="fas fa-times"></i>
+  </a>
+</div>
+
+<div class="pending-view">
+  <h1>Cart</h1>
+  <% @ordered_drugs.each do |ordered_drug| %>
+    <div class="cart-card">
+      <% if ordered_drug.drug.pic.attached?%>
+        <%=cl_image_tag ordered_drug.drug.pic.key%>
+      <%else%>
+        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+      <%end%>
+      <div class="cart-card-infos">
+        <h2><%=ordered_drug.drug.name%></h2>
+        <div class=cart-card-bottom>
+          <%= image_tag "moins.png" %>
+          <p><%= ordered_drug.quantity %></p>
+          <%= image_tag "plus.png" %>
+        </div>
+      </div>
+    </div>
+  <% end %>
 </div>
