--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -33,3 +33,21 @@
   width: 100%;
   backdrop-filter: blur(8px);
 }
+
+.cart {
+  position: relative;
+}
+.total {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: red;
+  color: white;
+  font-size: 8pt;
+  text-align: center;
+  line-height: 20px;
+  left: 235px;
+  top: 2px;
+  z-index: 50;
+}
