--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,7 +9,12 @@
     <% if @lastorder %>
       <% if @lastorder.status == 'initialized' || @lastorder.status == 'pending' || @lastorder.status == 'ready' %>
         <%= link_to order_path(@lastorder), class: "footer-btn" do %>
-          <%= image_tag "shopping-cart.png" %>
+          <div class="cart"><%= image_tag "shopping-cart.png" %></div>
+          <% if @order %>
+            <% if @ordered_drugs && @ordered_drugs.count > 0 %>
+              <div class="total"> <%= @ordered_drugs.count %> </div>
+            <% end %>
+          <% end %>
         <% end %>
       <% end %>
       <% else %>
