--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,12 +15,11 @@
 
 <div class="banner">
   <div id="banner-search-bar">
-    <p>Prescription Delivery</p>
     <%= form_tag pharmacies_path, method: :get do %>
       <%= text_field_tag :query,
         params[:query],
         id: "address-input",
-        placeholder: "Type your location here...."
+        placeholder: "Enter your location"
       %>
       <%= submit_tag "Go", class: "search-button" %>
     <% end %>
