changed drug index

--- a/app/assets/stylesheets/components/_drugsearch.scss
+++ b/app/assets/stylesheets/components/_drugsearch.scss
@@ -1,15 +1,16 @@
+.drug-index-search {
+  display: flex;
+  flex-direction: row;
+}
+
 .searchadrug {
   border-radius: 30px;
-  width: 73vw;
-  position: relative;
+  width: 70vw;
   padding-top: 7px;
 }
 
-.button_prescription {
+.drug-search-bard-button {
   border-radius: 50px;
-  position: absolute;
-  top: 94px;
-  right: 11px;
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.3em 1.2em;
   text-decoration: none;
@@ -22,4 +23,5 @@
   align-items: center;
   font-size: 16px;
   transform: rotate(112deg);
+  margin-left: 10px;
 }
