--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,12 +9,12 @@
     <% if @lastorder %>
       <% if @lastorder.status == 'initialized' || @lastorder.status == 'pending' || @lastorder.status == 'ready' %>
         <%= link_to order_path(@lastorder), class: "footer-btn" do %>
-          <div class="cart"><%= image_tag "shopping-cart.png" %></div>
-          <%# if @order %>
-            <% unless current_user.orders.last.quantity.zero? %>
-              <div class="total"> <%= current_user.orders.last.quantity %> </div>
-            <% end %>
-          <%# end %>
+          <div class="action-bar">
+            <div class="cart"><%= image_tag "shopping-cart.png" %></div>
+              <% unless current_user.orders.last.quantity.zero? %>
+                <div class="total"> <%= current_user.orders.last.quantity %> </div>
+              <% end %>
+          </div>
         <% end %>
       <% end %>
       <% else %>
