--- a/app/assets/stylesheets/pages/_order.scss
+++ b/app/assets/stylesheets/pages/_order.scss
@@ -25,6 +25,20 @@
   margin-top: 17px;
 }
 
+.sign-out-btn {
+  font-size: 15px;
+  color: red;
+  text-decoration: underline;
+  padding: 5px;
+  text-align: right;
+}
+
+.cart-card h6 {
+  font-size: 18px;
+  font-weight: bold;
+  color: #00B8F5;
+}
+
 .cart-card-infos {
   padding: 5px 15px;
   height: 80px;
