--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -54,7 +54,8 @@
   font-size: 8pt;
   text-align: center;
   line-height: 20px;
-  margin-left: 20px;
+  margin-left: 22px;
+  margin-bottom: 5px;
   top: 2px;
   z-index: 50;
 }
