footer is pretty good. maybe we can change the css around a bit

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -59,3 +59,13 @@
   top: 2px;
   z-index: 50;
 }
+
+.glow {
+  padding: 5px;
+}
+
+.glow.active {
+  background-color: #00B8F5;
+  border-radius: 10px;
+  padding: 5px;
+}
