--- a/app/assets/stylesheets/pages/_pharmacy-index.scss
+++ b/app/assets/stylesheets/pages/_pharmacy-index.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   background-color: white;
   z-index: 0;
+  padding: 0 10px;
   margin: 95px 10px 10px 10px;
 }
 
@@ -19,7 +20,7 @@
 }
 
 .pharmacy-view #map {
-  width: 95vw;
+  width: 89vw;
   height: 300px;
   border-radius: 20px 20px 0 0;
   margin-bottom: -10px;
