--- a/app/views/orders/_user-index.html.erb
+++ b/app/views/orders/_user-index.html.erb
@@ -13,7 +13,7 @@
           <% elsif order.status == 'ready' %>
             <h6>Click here to make your payment</h6>
           <% elsif order.status == 'complete' %>
-            <h6>Order delivered</h6>
+            <h6>Your order will be delivered today</h6>
           <% end %>
         </div>
       <% end %>
