--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -5,5 +5,6 @@
 @import "pharmacy-index";
 @import "pharma";
 @import "order";
-@import "pending_user";
 @import "dashboard";
+@import "pending_user";
+@import "user_ready";
