--- a/app/views/orders/_user-pending.html.erb
+++ b/app/views/orders/_user-pending.html.erb
@@ -18,7 +18,7 @@
         <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
       <%end%>
       <div class="cart-card-infos">
-        <h2><%=ordered_drug.drug.name%></h2>
+        <h2><%=ordered_drug.drug.name.downcase.capitalize%></h2>
         <div class=cart-card-bottom>
           <%= image_tag "moins.png" %>
           <p><%= ordered_drug.quantity %></p>
