--- a/app/assets/stylesheets/pages/_pending_user.scss
+++ b/app/assets/stylesheets/pages/_pending_user.scss
@@ -2,7 +2,7 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  padding: 10px;
+  padding: 10px 10px 80px 10px;
   justify-content: center;
   background-color: white;
   z-index: 0;
