--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,12 +5,12 @@
         <%= image_tag "home.png" %>
       <% end %>
     </div>
-    <div class="glow <%= 'active' if current_page?(pharmacies_path) %>">
+    <div class="glow <%= 'active' if current_page?(pharmacies_path) || (@pharmacy && current_page?(pharmacy_path(@pharmacy))) %>">
       <%= link_to pharmacies_path, class: "footer-btn" do %>
         <%= image_tag "map.png" %>
       <% end %>
     </div>
-    <div class="glow <%= 'active' if @lastorder && current_page?(order_path(@lastorder)) %>">
+    <div class="glow <%= 'active' if @lastorder && (current_page?(order_path(@lastorder)) || current_page?(drugs_path)) %>">
       <% if @lastorder %>
         <% if @lastorder.status == 'initialized' || @lastorder.status == 'pending' || @lastorder.status == 'ready' || @lastorder.status == 'complete' %>
           <%= link_to order_path(@lastorder), class: "footer-btn" do %>
