--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -30,7 +30,8 @@
                 </div>
                 <h2 class="card-drug-plus">
                 <% if OrderedDrug.find_by(drug: drug, order: current_user.orders.last) %>
-                  <%= link_to image_tag("cocher.png", border: 0, class:'icon'), order_ordered_drugs_path(current_user.orders.last, params: { drug_id: drug.id }), method: :post, remote: true %>
+                  <%= image_tag("cocher.png", border: 0, class:'icon') %>
+                  <%# <%= link_to image_tag("cocher.png", border: 0, class:'icon'), order_ordered_drugs_path(current_user.orders.last, params: { drug_id: drug.id }), method: :post, remote: true %> %>
                   <% else %>
                   <%= link_to image_tag("plus.png", border: 0, class:'icon'), order_ordered_drugs_path(current_user.orders.last, params: { drug_id: drug.id, pharmacy_id: params[:pharmacy_id] }), method: :post, remote: true %>
                 <% end %>
