--- a/app/views/orders/_user-initialize.html.erb
+++ b/app/views/orders/_user-initialize.html.erb
@@ -1,15 +1,25 @@
 <div class="view">
-  <h1>Cart</h1>
-  <%= link_to new_order_ordered_drug_path(order_id: @order.id) do %>
-    <button class="btn-ghost">Add Prescription</button>
-  <%end%>
-  <% @ordered_drugs.each do |ordered_drug| %>
+  <div class="main">
+    <h1>Cart</h1>
+      <%= simple_form_for(order) do |f|%>
+        <%= f.input :prescriptions, as: :file, input_html: { multiple: true, class:'d-none'}  %>
+        <%= f.submit "Submit", class:'btn'%>
+      <% end %>
+  </div>
+  <div class=main2>
+      <% if order.prescriptions.attached?%>
+        <%@order.prescriptions.each do |prescription|%>
+          <%= cl_image_tag prescription.key, class: 'card-prescription' %>
+        <%end%>
+      <%end%>
+  </div>
+  <% ordered_drugs.each do |ordered_drug| %>
     <div class="cart-card">
       <% if ordered_drug.drug.pic.attached?%>
         <%=cl_image_tag ordered_drug.drug.pic.key%>
-      <%else%>
+      <% else %>
         <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-      <%end%>
+      <% end %>
       <div class="cart-card-infos">
         <h2><%=ordered_drug.drug.name%></h2>
         <div class=cart-card-bottom>
