--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -41,7 +41,7 @@ a .dashboard-card-infos {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0 20px;
+  padding: 0 0 0 20px;
   height: 80px;
   img {
     height: 17px;
