--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,6 +7,12 @@
     font-size: 45px;
   }
 }
+.home-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding-top: 30px;
+}
 
 .banner {
   display: flex;
