--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,7 @@
 <div class="home-view">
-    <div class="row align-items-center title">
-      <div class="col align-self-center">
+    <div class="home-top">
       <h1>Drug<br/>Dealer</h1>
-      </div>
-      <div class="col align-self-center">
       <%= image_tag "logo.png", style: 'height:120px;width:120px' %>
-        <%# <img src="logo.png" alt="" width="150" height="150"> %>
-      </div>
     </div>
   </div>
   <div class="view sub-title">
