--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -5,7 +5,9 @@
   color: white;
   text-align: center;
   background-color: #00B8F5;
+  position: relative;
   font-size: 20px;
+  width: 100%;
   }
 
 .button-pharma-index {
