--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -10,7 +10,7 @@
   backdrop-filter: blur(8px);
   height: fit-content;
   box-shadow: 0 0 15px rgba(0,0,0,0.07);
-  width: 100%;
+  width: 100vw;
   z-index: 2;
 }
 
