--- a/app/assets/stylesheets/pages/_pharma.scss
+++ b/app/assets/stylesheets/pages/_pharma.scss
@@ -1,7 +1,10 @@
 .pharmacy-show {
-  padding: 20px 20px 40px 20px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 20px 20px 20px 20px;
   margin-bottom: -60px;
-  border-radius: 20px 20px 0 0;
+  border-radius: 20px;
   color: white;
   background-color: #00243D;
   z-index: 1;
@@ -12,15 +15,6 @@
   p {
     font-size: 15px;
   }
-}
-
-.pharmacy-show-card {
-  position: relative;
-  display: block;
-  height: 100%;
-  overflow: hidden;
-  border-radius: 20px 20px 0 0;
-  text-decoration: none;
 }
 
 .pharmacy-show-card #map {
