--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -15,30 +15,9 @@
 
     <% end %>
     <div class="two-columns-cards">
-          <% @drugs.each do |drug| %>
-            <div class="card-drug">
-              <div class="topcard">
-                <% if drug.pic.attached?%>
-                  <%=cl_image_tag drug.pic.key%>
-                <%else%>
-                  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-                <%end%>
-              </div>
-              <div class="card-drug-infos">
-                <div >
-                  <h2><%= drug.formated_name %></h2>
-                </div>
-                <h2 class="card-drug-plus">
-                <% if OrderedDrug.find_by(drug: drug, order: current_user.orders.last) %>
-                  <%= image_tag("cocher.png", border: 0, class:'icon') %>
-                  <%# <%= link_to image_tag("cocher.png", border: 0, class:'icon'), order_ordered_drugs_path(current_user.orders.last, params: { drug_id: drug.id }), method: :post, remote: true %> %>
-                  <% else %>
-                  <%= link_to image_tag("plus.png", border: 0, class:'icon'), order_ordered_drugs_path(current_user.orders.last, params: { drug_id: drug.id, pharmacy_id: params[:pharmacy_id] }), method: :post, remote: true %>
-                <% end %>
-                </h2>
-              </div>
-            </div>
-          <% end %>
-        </div>
+      <% @drugs.each do |drug| %>
+        <%= render 'drug_card', drug: drug %>
+      <% end %>
+    </div>
   </div>
 </div>
