--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,10 +1,9 @@
  .main{
-    display: flex;
-    justify-content: space-between;
-  }
-  .main2 {
-    display: flex;
-  }
+  padding: 10px;
+  border-radius: 20px;
+  background-color: lightgray;
+}
+
   .card-prescription {
     width: 70px;
     height: 70px;
@@ -16,6 +15,12 @@
     border-radius: 20px;
     box-shadow: 1px 1px 5px 0px rgba(82, 82, 82, 0.75);
     transition: all 150ms ease-in-out;
+  }
+
+  .edit_order {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
   .order_prescriptions > label {
@@ -40,3 +45,21 @@
   font-weight: 400;
   font-size: 18px;
   }
+
+  .btn-prescription {
+  width: 47px;
+  height: 47px;
+  border-radius: 50%;
+  border: none;
+  padding: 10px;
+  background-color: #000507;
+  color: white;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.form-group {
+  margin: 0 20px 0 0;
+  background-color: white;
+  border-radius: 32px;
+}
