--- a/app/assets/stylesheets/pages/_order.scss
+++ b/app/assets/stylesheets/pages/_order.scss
@@ -123,3 +123,15 @@
   border: none;
   width: 100px;
 }
+
+.btn-prescription-treatment {
+    width: 100%;
+  margin: 25px 0;
+  border-radius: 32px;
+  border: none;
+  padding: 10px;
+  background-color: #000507;
+  color: white;
+  font-weight: 400;
+  font-size: 18px;
+}
